--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .sqr {
     width: 50px;
-    height: 50px;
+    height: 100px;
     border: 1px solid black;
 }
 
@@ -13,6 +13,6 @@
     flex: 0 0 6%
 }
 
-.sqr:hover {
+/* .sqr:hover {
     background-color: black;
-}
+} */
