--- a/style.css
+++ b/style.css
@@ -1,17 +1,34 @@
 .sqr {
-    width: 50px;
-    height: 100px;
+    width: auto;
+    height: auto;
     border: 1px solid black;
 }
 
 .cont {
-    display: flex;
-    flex-wrap: wrap;
+    /* display: flex;
+    flex-wrap: wrap; */
+
+    display: grid;
+    grid-template-rows: repeat(16, 1fr); /* should change depending on number of rows/cols (same length) */
+    grid-auto-flow: column;
+
+    width: 960px;
+    height: 960px;
+
+
+    border: 1px solid green;
+    margin: 10px;
 }
 
-.cont > * {
-    flex: 0 0 6%
-}
+
+
+
+/* .cont > * {
+    margin-bottom: 1rem;
+} */
+/*.cont > * {
+    flex: 0 0 auto;
+} */
 
 /* .sqr:hover {
     background-color: black;
