--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+body {
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .sqr {
     width: auto;
     height: auto;
@@ -10,26 +20,14 @@
 
     display: grid;
     grid-template-rows: repeat(16, 1fr); /* should change depending on number of rows/cols (same length) */
+    grid-template-columns: repeat(16, 1fr);
+
     grid-auto-flow: column;
 
-    width: 960px;
-    height: 960px;
-
+    width: 300px;
+    height: 300px;
 
     border: 1px solid green;
     margin: 10px;
 }
 
-
-
-
-/* .cont > * {
-    margin-bottom: 1rem;
-} */
-/*.cont > * {
-    flex: 0 0 auto;
-} */
-
-/* .sqr:hover {
-    background-color: black;
-} */
