--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.container {
+    border: 1px solid black;
+    padding: 10px;
+}
 .sqr {
     width: auto;
     height: auto;
@@ -41,3 +45,7 @@ body {
     justify-content: center;
 }
 
+.resizeBtn {
+    background-color: white;
+    border-radius: 10px;
+}
